    (Ilia, valli at icsurselva dot ch)

- IMAP extension:
  . Fixed bug #53377 (imap_mime_header_decode() doesn't ignore \t during long
    MIME header unfolding). (Adam)
    
- Intl extension:
  . Fixed bug #53512 (NumberFormatter::setSymbol crash on bogus $attr values).
    (Felipe)
  . Fixed bug #53612 (Segmentation fault when using cloned several intl
    objects). (Gustavo)

- MySQL Improved extension:
  . Fixed bug #53503 (mysqli::query returns false after successful LOAD DATA 
    query). (Kalle)
  . Fixed bug #53425 (mysqli_real_connect() ignores client flags when built to 
    call libmysql). (Kalle, tre-php-net at crushedhat dot com)
  . Fixed buggy counting of affected rows when using the text protocol. The
    collected statistics were wrong when multi_query was used with mysqlnd.
	(Andrey)

- OpenSSL extension:
  . Implemented FR #53447 (Cannot disable SessionTicket extension for servers
    that do not support it) by adding a no_ticket SSL context option. (Adam,
    Tony)
  . Fixed bug #53592 (stream_socket_enable_crypto() busy-waits in client mode).
    (Gustavo)
  . Fixed stream_socket_enable_crypto() not honoring the socket timeout in
    server mode. (Gustavo)

- PDO Oracle driver:
  . Fixed bug #39199 (Cannot load Lob data with more than 4000 bytes on
    ORACLE 10). (spatar at mail dot nnov dot ru)
    
- PDO PostgreSQL driver:
  . Fixed bug #53517 (segfault in pgsql_stmt_execute() when postgres is down).
    (gyp at balabit dot hu)

- Phar extension:
  . Fixed bug #53541 (format string bug in ext/phar).
    (crrodriguez at opensuse dot org, Ilia)

- PHP-FPM SAPI:
  . Fixed bug #53527 (php-fpm --test doesn't set a valuable return value). (fat)

- SOAP extension:
  . Fixed possible crash introduced by the NULL poisoning patch (Mateusz Kocielski, Pierre)

- SPL extension:
  . Fixed bug #53515 (property_exists incorrect on ArrayObject null and 0
    values). (Felipe)
    
- SQLite3 extension: